grml-live (0.0.14) unstable; urgency=low

  * Set debconf configuration for postfix via
    /etc/grml/fai/config/scripts/GRMLBASE/05-hostname
  * Improve check for presence of FAI log directory in
    /etc/grml/fai/config/scripts/GRMLBASE/95-package-information
  * Configure apt-listchanges via new script
    /etc/grml/fai/config/scripts/GRMLBASE/97-apt-listchanges
  * Drop findimagedupes from GRML_FULL (too many new dependencies,
    being: libgraphics-magick-perl libgraphicsmagick1 libwmf0.2-7)
  * Add new packages to GRML_FULL:
    - asql
    - at76-usb-modules-2.6.23-grml
    - edac-utils
    - ifupdown-extra
    - opencryptoki
    - pmailq
    - r6040-modules-2.6.23-grml

 -- Michael Prokop <mika@grml.org>  Mon, 17 Dec 2007 00:51:05 +0100

grml-live (0.0.13) unstable; urgency=low

  * New option '-b' for "build-only".
  * Replace mailx with bsd-mailx in GRML_FULL.
    http://packages.qa.debian.org/b/bsd-mailx/news/20071209T135336Z.html
  * Store package list in /usr/share/doc/grml-docs/packages/dpkg_list
  * Document grml2ram bootoption in grml-cheatcodes.txt
  * Use -no-progress for Squashfs build process.
  * Improve /etc/resolv.conf handling in
    /etc/grml/fai/config/scripts/GRMLBASE/96-apt-listbugs
  * Adjust hostname in /etc/postfix/main.cf.
  * Make sure /etc/grml/fai/config/scripts/GRMLBASE/40-deborphan does not fail.
  * Fix typo in /etc/grml/fai/config/scripts/GRMLBASE/32-xorg
  * Make sure $HOSTNAME is unset by default.
  * Disable Recommends for aptitude as well.
  * Check for presence of live-initramfs in 10-build-initramfs.
  * Install aptitude in softupdate if not present.
  * Always drop groff-base, man-db, info, man-db, manpages and nano from grml-small.
  * Fix snort setup (/etc/default/snort.dpkg-dist) via
    /etc/grml/fai/grml/grml_cleanup_chroot
  * Do some further cleanups via /etc/grml/fai/grml/grml_cleanup_chroot.deborphan
  * Remove hwtools from GRML_FULL, see #397723